kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  labels:
    app: spring-petclinic
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-petclinic
